src/objects/WGUCourseCompletionTask__c.object
<CustomObject>
    <description>Custom object to manage template definitions for course assessments, requirements, or tasks. Student instances of assessments are managed via the StudentCourseCompletionTask__c object.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BannerCode__c</fullName>
        <description>The code represented in Banner if different than the code represented in PAMS.</description>
        <label>Banner Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CourseVersionID__c</fullName>
        <description>The PAMS ID course version record that this Task should mapped to in the trigger on insert.</description>
        <label>Course Version ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the object is used as test data only.</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAMSID__c</fullName>
        <description>The Unique ID represented as a combination of fields from PAMS. type-courseversionid-assessment.</description>
        <label>PAMS ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAMSPK__c</fullName>
        <description>Table PK in pams</description>
        <externalId>true</externalId>
        <label>PAMS PK</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PrerequisiteTask__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Self-referential option for task hierarchies</description>
        <inlineHelpText>Select a prerequisite task, if any.</inlineHelpText>
        <label>Prerequisite Task</label>
        <referenceTo>WGUCourseCompletionTask__c</referenceTo>
        <relationshipLabel>Subordinate Tasks</relationshipLabel>
        <relationshipName>SubordinateTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>The title of the assessment or task that needs to be accomplished to complete the course.</description>
        <label>Title</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Objective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WGUCourseVersion__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>WGU Course Version</label>
        <referenceTo>WGUCourseVersion__c</referenceTo>
        <relationshipLabel>WGU Course Completion Task</relationshipLabel>
        <relationshipName>WGUCourseCompletionTask</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WGUCourse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Course that this task is a requirement to complete.</description>
        <label>WGU Course</label>
        <referenceTo>WGUCourse__c</referenceTo>
        <relationshipLabel>WGU Course Completion Task</relationshipLabel>
        <relationshipName>WGUCourseCompletionTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>WGU Course Completion Task</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>BannerCode__c</columns>
        <columns>PAMSID__c</columns>
        <columns>PAMSPK__c</columns>
        <columns>Title__c</columns>
        <columns>Type__c</columns>
        <columns>WGUCourse__c</columns>
        <columns>WGUCourseVersion__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>WGU Course Task Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WGU Course Completion Task</pluralLabel>
    <recordTypes>
        <fullName>Assessment</fullName>
        <active>true</active>
        <label>Assessment</label>
    </recordTypes>
    <recordTypes>
        <fullName>ObjectiveAssessment</fullName>
        <active>false</active>
        <label>Objective Assessment</label>
    </recordTypes>
    <recordTypes>
        <fullName>PerformanceAssessment</fullName>
        <active>false</active>
        <label>Performance Assessment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Requirement</fullName>
        <active>false</active>
        <label>Requirement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Task</fullName>
        <active>true</active>
        <label>Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>ZeroCUTask</fullName>
        <active>false</active>
        <label>Zero CU Task</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>